# git-remote-g2g.cpp

./: .gitmodules  CMakeLists.txt
cmake/: HunterConfig.cmake
src/: main.cpp
